# MSG

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md
Events/: CMakeLists.txt
Events/Driver/SDL2/: CMakeLists.txt
Events/include/Events/: Event.hpp  EventManager.hpp  RegisteredEvent.hpp
Events/src/: EventManager.cpp
Keyboard/: CMakeLists.txt
Keyboard/Driver/SDL2/: CMakeLists.txt
Keyboard/include/Keyboard/: Enums.hpp  Events.hpp  Keyboard.hpp  ScanCode.hpp  Structs.hpp
PrimitiveOptimizer/: CMakeLists.txt
PrimitiveOptimizer/include/SG/: LodsGenerator.hpp  POBiMap.hpp  POPair.hpp  POReference.hpp  POSymetricMatrix.hpp  POTriangle.hpp  POVertex.hpp  PrimitiveOptimizer.hpp
PrimitiveOptimizer/src/: LodsGenerator.cpp  POPair.cpp  POSymetricMatrix.cpp  POTriangle.cpp  POVertex.cpp  PrimitiveOptimizer.cpp
SwapChain/: CMakeLists.txt
SwapChain/Driver/OpenGL/Shaders/: CMakeLists.txt
SwapChain/include/SwapChain/: Handles.hpp  Structs.hpp  SwapChain.hpp
UnitTests/SceneRenderer/: CMakeLists.txt
UnitTests/SceneRenderer/src/: main.cpp
Window/: CMakeLists.txt
Window/Driver/SDL2/: CMakeLists.txt
Window/include/Window/: Events.hpp  Structs.hpp  Window.hpp
libs/: CMakeLists.txt
libs/Animation/: CMakeLists.txt
libs/Animation/include/: Animation.hpp
libs/Animation/include/Animation/: Interpolator.hpp
libs/Animation/include/MSG/: Animation.hpp
libs/Animation/src/: Animation.cpp
libs/Animation/src/MSG/: Animation.cpp
libs/Assets/: CMakeLists.txt  README.md
libs/Assets/Parsers/: CMakeLists.txt
libs/Assets/Parsers/BMP/: BMP.cpp  CMakeLists.txt
libs/Assets/Parsers/BT/: BT.cpp  CMakeLists.txt
libs/Assets/Parsers/BinaryData/: BinaryData.cpp  CMakeLists.txt
libs/Assets/Parsers/DDS/: CMakeLists.txt  DDS.cpp
libs/Assets/Parsers/FBX/: CMakeLists.txt
libs/Assets/Parsers/GLTF/: CMakeLists.txt  GLTF.cpp
libs/Assets/Parsers/HDR/: CMakeLists.txt  HDR.cpp
libs/Assets/Parsers/KTX/: CMakeLists.txt  KTX.cpp
libs/Assets/Parsers/KTX2/: CMakeLists.txt  KTX.cpp
libs/Assets/Parsers/MSGAssets/: CMakeLists.txt  MSGAssets.cpp  README.md
libs/Assets/Parsers/MTLLIB/: CMakeLists.txt  MTLLIB.cpp
libs/Assets/Parsers/STBImage/: CMakeLists.txt  STBImage.cpp
libs/Assets/include/Assets/: Asset.hpp  Parser.hpp  Uri.hpp
libs/Assets/src/Assets/: Asset.cpp  Parser.cpp  Uri.cpp
libs/BRDF/: CMakeLists.txt
libs/BRDF/include/MSG/: BRDF.hpp
libs/BRDF/src/MSG/: BRDF.cpp
libs/BVH/: CMakeLists.txt
libs/BVH/include/MSG/: BVH.hpp
libs/BVH/inline/MSG/: BVH.inl
libs/BiMap/: CMakeLists.txt
libs/BiMap/include/MSG/: BiMap.hpp
libs/BiMap/inline/MSG/: BiMap.inl
libs/BoundingVolume/: CMakeLists.txt
libs/BoundingVolume/include/MSG/: BoundingVolume.hpp
libs/BoundingVolume/src/MSG/: BoundingVolume.cpp
libs/Buffer/: CMakeLists.txt
libs/Buffer/include/: Buffer.hpp
libs/Buffer/include/Buffer/: Accessor.hpp  View.hpp
libs/Buffer/include/MSG/: Buffer.hpp
libs/Buffer/src/: Buffer.cpp
libs/Buffer/src/Buffer/: Accessor.cpp  View.cpp
libs/Camera/: CMakeLists.txt
libs/Component/: CMakeLists.txt
libs/Core/: CMakeLists.txt
libs/Debug/: CMakeLists.txt
libs/ECS/: CMakeLists.txt
libs/Entity/: CMakeLists.txt
libs/Events/: CMakeLists.txt
libs/FogArea/: CMakeLists.txt
libs/GUI/include/: Structs.hpp
libs/Image/: CMakeLists.txt
libs/Image/include/: Cubemap.hpp  Image.hpp  Image1D.hpp  Image2D.hpp  Image3D.hpp
libs/Image/src/: Cubemap.cpp  Image.cpp  Image1D.cpp  Image2D.cpp  Image3D.cpp
libs/ImageUtils/: CMakeLists.txt
libs/Keyboard/: CMakeLists.txt
libs/Light/: CMakeLists.txt
libs/Material/: CMakeLists.txt
libs/Material/include/: Material.hpp
libs/Material/src/: Material.cpp
libs/MemoryPool/: CMakeLists.txt
libs/Mesh/: CMakeLists.txt
libs/Mesh/include/: Mesh.hpp
libs/Mesh/src/: Mesh.cpp
libs/MeshInstances/: CMakeLists.txt
libs/Modules/: CMakeLists.txt
libs/Mouse/: CMakeLists.txt
libs/OGL/: CMakeLists.txt
libs/OGL/OGLBindlessTextureSampler/: CMakeLists.txt
libs/OGL/OGLBuffer/: CMakeLists.txt
libs/OGL/OGLCmdBuffer/: CMakeLists.txt
libs/OGL/OGLContext/: CMakeLists.txt
libs/OGL/OGLDebugGroup/: CMakeLists.txt
libs/OGL/OGLFence/: CMakeLists.txt
libs/OGL/OGLFrameBuffer/: CMakeLists.txt
libs/OGL/OGLPipeline/: CMakeLists.txt
libs/OGL/OGLProgram/: CMakeLists.txt
libs/OGL/OGLRenderPass/: CMakeLists.txt
libs/OGL/OGLSampler/: CMakeLists.txt
libs/OGL/OGLShader/: CMakeLists.txt
libs/OGL/OGLTexture/: CMakeLists.txt
libs/OGL/OGLTypedBuffer/: CMakeLists.txt
libs/OGL/OGLVertexArray/: CMakeLists.txt
libs/OGLContext/: CMakeLists.txt
libs/OGLTexture/: CMakeLists.txt
libs/PageFile/: CMakeLists.txt
libs/PageFile/src/: PageFile.cpp
libs/Parenting/: CMakeLists.txt
libs/PixelDescriptor/: CMakeLists.txt
libs/PixelDescriptor/include/: PixelDescriptor.hpp
libs/PixelDescriptor/src/: PixelDescriptor.cpp
libs/PrimitiveOptimizer/: CMakeLists.txt
libs/PrimitiveOptimizer/include/: LodsGenerator.hpp  PrimitiveOptimizer.hpp
libs/PrimitiveOptimizer/src/: LodsGenerator.cpp  POPair.cpp  POSymetricMatrix.cpp  POTriangle.cpp  POVertex.cpp  PrimitiveOptimizer.cpp
libs/QtBinding/: CMakeLists.txt
libs/Renderer/: CMakeLists.txt  README.md
libs/Renderer/ShaderLibrary/: CMakeLists.txt  README.md
libs/RendererContext/: CMakeLists.txt
libs/SH/: CMakeLists.txt
libs/Scene/: CMakeLists.txt
libs/Scene/include/: Scene.hpp
libs/Scene/src/: Scene.cpp
libs/SceneGraph/: CMakeLists.txt
libs/ShaderLibrary/: CMakeLists.txt
libs/ShaderLibrary/cmake/: Generate_Program_Lib.cmake  Generate_Shaders_Lib.cmake  ShaderLibDefines.cmake
libs/ShapeGenerator/: CMakeLists.txt  README.md
libs/Shapes/: CMakeLists.txt
libs/SparseSet/: CMakeLists.txt
libs/SwapChain/: CMakeLists.txt  README.md
libs/Texture/: CMakeLists.txt
libs/Texture/include/: Sampler.hpp  Texture.hpp
libs/Texture/src/: Texture.cpp
libs/TextureUtils/: CMakeLists.txt
libs/Threads/: CMakeLists.txt
libs/Tools/: CMakeLists.txt
libs/Transform/: CMakeLists.txt
libs/VolumetricFog/: CMakeLists.txt
libs/Window/: CMakeLists.txt
(+1685 files in other folders)
